--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -16,7 +16,7 @@
     <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">TheHighlandBreak</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,15 +26,22 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link js-scroll-trigger" href="#services">Find</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Book</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+
+    <header>
+    <div class="container text-center">
+      <h1>TheHighlandsBreak</h1>
+      <p class="lead">A Scottish get away!</p>
+    </div>
+  </header>
     <footer class="bg-dark text-white py-4">
     <div class="container">
         <div class="row">
