--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -16,7 +16,7 @@
     <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">TheHighlandBreak</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">TheHighlandsBreak</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -42,6 +42,26 @@
       <p class="lead">A Scottish get away!</p>
     </div>
   </header>
+
+  <section>
+  1
+  </section>
+
+<section>
+2
+</section>
+
+<section id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h2>Book Now</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
     <footer class="bg-dark text-white py-4">
     <div class="container">
         <div class="row">
