changed some spelling

--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -26,10 +26,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Find</a>
+            <a class="nav-link js-scroll-trigger" href="#find">Find</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Book</a>
+            <a class="nav-link js-scroll-trigger" href="#book">Book</a>
           </li>
         </ul>
       </div>
@@ -51,7 +51,7 @@
 2
 </section>
 
-<section id="contact">
+<section id="book">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -92,7 +92,7 @@
                 </ul>
             </div>
             <div class="col-12 text-right small">
-                @2019 Company Name
+                @2020 DTs Design
             </div>
         </div>
     </div>
