added images to carousel and some styling to css

--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -36,8 +36,9 @@
     </div>
   </nav>
 
-    <header>
+    <header id="intro-image"class="d-block w-100">
     <div class="container text-center">
+    
       <h1>TheHighlandsBreak</h1>
       <p class="lead">A Scottish get away!</p>
     </div>
@@ -53,21 +54,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="assets/images/pic1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="assets/images/fairypool.jpeg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="assets/images/landscape33.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -89,11 +90,23 @@
 FIND It
 </section>
 
+<!-- Form -->
+<h2>Book Now</h2>
+<p>Fill out the form below, we will help you with you're Scottish break.</p>
 <section id="book">
     <div class="container">
+    <div class="book">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Book Now</h2>
+        <div class="center-form">
+                <form>
+                    <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
+                    <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+                    <input type="text" name="phonenumber" class="form-control" id-="phonenumber" placeholder="Phone Number" required/>
+                    <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Enquiry" required></textarea>
+                    <button type="submit" class="btn btn-secondary center-block">Send Messege</button>
+                </form>
+          </div>
         </div>
       </div>
     </div>
