added about section

--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -46,7 +46,10 @@
 			<p class="lead">A Scottish get away!</p>
 		</div>
 	</header>
-
+<section>
+    <div class="container" id="about">
+    </div>
+</section>
 	<section>
 		<!-- Bootstrap -->
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
