--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -43,7 +43,7 @@
 		<div class="container text-center">
 
 			<h1>TheHighlandsBreak</h1>
-			<p class="lead">A Scottish get away!</p>
+			<p class="lead">A Scottish get away</p>
 		</div>
 	</header>
 <section>
@@ -93,33 +93,17 @@
 	</section>
 
 	<section>
-		FIND It
+		<div class="container text-center">
+        <h1> Find it!</h1>
+        <p>Find your next Highlands break</p>
 	</section>
 
 
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 col-sm-6 pl-0">
-					<ul class="nav flex-column">
-						<li class="nav-item"><a href="#" class="nav-link">About</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">Services</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">Team</a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 col-sm-6 pl-0">
-					<ul class="nav flex-column">
-						<li class="nav-item"><a href="#" class="nav-link">More</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">Support</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">Legal</a></li>
-					</ul>
-				</div>
-				<div class="col-md-4 ml-auto text-right">
-					<small class="text-uppercase">Connect on social media</small>
-					<ul class="nav justify-content-end">
+				<div class="col-12 ml-auto text-center">
+					<small class="text-uppercase">Social</small>
+					<ul class="nav justify-content-center">
 						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-pinterest fa-lg"></i></a>
 						</li>
 						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-twitter fa-lg"></i></a>
@@ -128,11 +112,9 @@
 						</li>
 						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-facebook fa-lg"></i></a>
 						</li>
-						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-skype fa-lg"></i></a>
-						</li>
 					</ul>
 				</div>
-				<div class="col-12 text-right small">
+				<div class="col-12 text-center small">
 					@2020 DTs Design
 				</div>
 			</div>
