--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -39,7 +39,7 @@
 		</div>
 	</nav>
 
-	<header id="intro-image" class="d-block w-100">
+	<header class="d-block w-100">
 		<div class="container text-center">
 
 			<h1>TheHighlandsBreak</h1>
@@ -93,7 +93,7 @@
 	</section>
 
 	<section>
-		<div class="container text-center">
+		<div class="container text-center" id="find">
         <h1> Find it!</h1>
         <p>Find your next Highlands break</p>
 	</section>
@@ -104,7 +104,6 @@
 				<div class="col-12 ml-auto text-center">
 					<small class="text-uppercase">Social</small>
 					<ul class="nav justify-content-center">
-						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-pinterest fa-lg"></i></a>
 						</li>
 						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-twitter fa-lg"></i></a>
 						</li>
