added line breaks and text to book it section

--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -43,11 +43,17 @@
 		<div class="container text-center">
 
 			<h1>TheHighlandsBreak</h1>
-			<p class="lead">A Scottish get away</p>
+			<p class="lead">A Scottish get away!</p>
 		</div>
 	</header>
+<hr>
+
 <section>
-    <div class="container" id="about">
+    <div class="container text-center" id="about">
+    <p>Do you love beautiful landscapes and sunsets?, You have came to the right place. 
+    Here at TheHighlandsBreak we want to take away the stress from going through hundreds of site's
+    to find the right thing. 
+    Take a look below for the top 10 places to Stay, Eat and keep amused in Scotland.</p>
     </div>
 </section>
 	<section>
@@ -91,13 +97,27 @@
 			</a>
 		</div>
 	</section>
-
+<hr>
 	<section>
 		<div class="container text-center" id="find">
         <h1> Find it!</h1>
         <p>Find your next Highlands break</p>
-	</section>
 
+
+
+
+
+
+
+
+
+
+        .
+	</section>
+<section>
+<h1>Book Now</h1>
+<p>Please fill in the below form and wee will be in touch to help.</p>
+</section>
 
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
