added div for maps, added css for map

--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -100,8 +100,9 @@
 <hr>
 	<section>
 		<div class="container text-center" id="find">
-        <h1> Find it!</h1>
+        <h1 class="section-heading uppercase" Find it!</h1>
         <p>Find your next Highlands break</p>
+        <div class="map"</div>
 
 
 
