added maps.js file, script tag with API

--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -99,24 +99,26 @@
 	</section>
 <hr>
 	<section>
+            <!-- Google Map -->
 		<div class="container text-center" id="find">
-        <h1 class="section-heading uppercase" Find it!</h1>
-        <p>Find your next Highlands break</p>
-        <div class="map"</div>
+  <h2>Find it</h2>
+<!--The div element for the map -->
+<div id="map"></div>
+
+<script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7hEe9xu6BYriWBZWNyJTduraXTeL9nJE&callback=initMap">
+</script>
 
 
 
 
 
 
-
-
-
-
-        .
+        
 	</section>
-<section>
-<h1>Book Now</h1>
+    <!--- Form -->
+<section id="book">
+<h2>Book Now</h2>
 <p>Please fill in the below form and wee will be in touch to help.</p>
 </section>
 
@@ -141,15 +143,12 @@
 		</div>
 	</footer>
 
-
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
 	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
 
 
