--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -105,9 +105,25 @@
 <!--The div element for the map -->
 <div id="map"></div>
 
-<script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7hEe9xu6BYriWBZWNyJTduraXTeL9nJE&callback=initMap">
-</script>
+<script>
+
+        function initMap () {
+
+            var map = new google.maps.Map(document.getElementById("map"), {
+
+            zoom: 3, 
+
+            center: {
+
+                lat:  46.619261,
+
+                lng: -33.134766;
+
+    </script>
+
+    <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7hEe9xu6BYriWBZWNyJTduraXTeL9nJE&callback=initMap"></script>
 
 
 
@@ -123,11 +139,17 @@
                 <h3 class="contact-heading uppercase text-center">Book Now</h3>
                 <h5 class="uppercase text-center">Please fill in the below form and wee will be in touch to help.</h5>
             </div>
-            <div class="center-form">
-                <form>
+            <div class="col-12 ml-auto text-center"class="center-form">
+                <form action="/action_page.php">
                     <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
+                    <input type="text" name="phonenumber" class="form-control" id="phonenumber" placeholder="Phone Number" required/>
                     <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-                    <textarea rows="5" name="projectsummary" class="form-control" id="projectsummary" placeholder="Project Description" required></textarea>
+                    <label for="cars">Choose an option:</label>
+    <option value="placetostay">Place to stay</option>
+    <option value="restaurant">Restaurant</option>
+    <option value="attraction">Attraction</option>
+    <option value="alloftheabove">All of the above</option>
+                    <textarea rows="5" name="additonalinfo" class="form-control" id="additonalinfo" placeholder="Additonal Information" required></textarea>
                     <button type="submit" class="btn btn-secondary center-block">Enquire</button>
                 </form>
             </div>
