--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -51,14 +51,15 @@
 <section>
     <div class="container text-center" id="about">
     <p>Do you love beautiful landscapes and sunsets?, You have came to the right place.</p>
-    
+
     <p>Here at TheHighlandsBreak we want to take away the stress from going through hundreds of site's
     to find the right thing. 
     Take a look below for the top 10 places to Stay, Eat and keep amused in Scotland.</p>
     </div>
 </section>
-	<section>
+
 		<!-- Bootstrap -->
+        	<section>
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -73,6 +74,7 @@
 						<p>Glamping Pod By the Sea in Scotland.</p>
 					</div>
 				</div>
+            </div> 
 				<div class="carousel-item">
 					<img src="assets/images/fairypool.jpeg" class="d-block w-100" alt="...">
 					<div class="carousel-caption d-none d-md-block">
@@ -99,15 +101,14 @@
 		</div>
 	</section>
 <hr>
-	<section>
             <!-- Google Map -->
+            	<section>
 		<div class="container text-center" id="find">
   <h2>Find it</h2>
 <!--The div element for the map -->
 <div id="map"></div>
 
-<script>
-
+    <script>
         function initMap () {
 
             var map = new google.maps.Map(document.getElementById("map"), {
@@ -121,43 +122,33 @@
                 lng: -33.134766;
 
     </script>
-
-    <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
-
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7hEe9xu6BYriWBZWNyJTduraXTeL9nJE&callback=initMap"></script>    
     </section>
     
     <!--- Form -->
 
-<section id="book" class="container-fluid ">
-        <div class="row bg-color-contact">
+    <section class="container-fluid">
+        <div class="row">
             <div>
-                <h3 class="contact-heading uppercase text-center">Book Now</h3>
-                <h5 class="uppercase text-center">Please fill in the below form and wee will be in touch to help.</h5>
+                <h3 class="contact-heading text-center">Book Now!</h3>
+                <h5 class="uppercase text-center">Please fill in th below and we will help you find your next highland break.</h5>
             </div>
-            <div class="col-12 ml-auto text-center"class="center-form">
-                <form action="/action_page.php">
+            <div class="center-form">
+                <form>
                     <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
                     <input type="text" name="phonenumber" class="form-control" id="phonenumber" placeholder="Phone Number" required/>
                     <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-                    <label for="cars">Choose an option:</label>
-    <option value="placetostay">Place to stay</option>
-    <option value="restaurant">Restaurant</option>
-    <option value="attraction">Attraction</option>
-    <option value="alloftheabove">All of the above</option>
-                    <textarea rows="5" name="additonalinfo" class="form-control" id="additonalinfo" placeholder="Additonal Information" required></textarea>
-                    <button type="submit" class="btn btn-secondary center-block">Enquire</button>
+                    <textarea rows="5" name="moreinfo" class="form-control" id="moreinfo" placeholder="More Information" required></textarea>
+                    <button type="submit" class="btn btn-secondary center-block">Send Messege</button>
                 </form>
             </div>
         </div>
-</section>
+    </section>
 
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
 				<div class="col-12 ml-auto text-center">
-					<small class="text-uppercase">Social</small>
+					<small class="text-uppercase" id="social-links">Social</small>
 					<ul class="nav justify-content-center">
-						</li>
 						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-twitter fa-lg"></i></a>
 						</li>
 						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-instagram fa-lg"></i></a>
@@ -169,19 +160,18 @@
 				<div class="col-12 text-center small">
 					@2020 DTs Design
 				</div>
-			</div>
-		</div>
-	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-	</script>
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+        </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+    </script>
+ <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
+ </script>
+ <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7hEe9xu6BYriWBZWNyJTduraXTeL9nJE&callback=initMap">
+ </script>    
 
-
-</body>
-
+    </body>
 </html>
