--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -105,29 +105,31 @@
             	<section>
 		<div class="container text-center" id="find">
   <h2>Find it</h2>
-<!--The div element for the map -->
-<div id="map"></div>
+  </div>
+
+  <!--The div element for the map -->
+<div id="map"> HI MAPS</div>
 
     <script>
-        function initMap () {
-
+        function initMap() {
             var map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 8, 
+                center: {
+                    lat:  56.6745575,
+                    lng: -5.0917746,
 
-            zoom: 3, 
-
-            center: {
-
-                lat:  46.619261,
-
-                lng: -33.134766;
+                }
+            });
+        }
 
     </script>
+
+
     </section>
     
     <!--- Form -->
 
     <section class="container-fluid">
-        <div class="row">
             <div>
                 <h3 class="contact-heading text-center">Book Now!</h3>
                 <h5 class="uppercase text-center">Please fill in th below and we will help you find your next highland break.</h5>
@@ -146,8 +148,7 @@
 
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
-				<div class="col-12 ml-auto text-center">
-					<small class="text-uppercase" id="social-links">Social</small>
+				<div class="col-12 ml-auto text-center"id="social-links">
 					<ul class="nav justify-content-center">
 						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-twitter fa-lg"></i></a>
 						</li>
@@ -161,16 +162,15 @@
 					@2020 DTs Design
 				</div>
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
         </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
     </script>
- <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
- </script>
- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7hEe9xu6BYriWBZWNyJTduraXTeL9nJE&callback=initMap">
+ <!-- <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
+ </script> -->
+ <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
  </script>    
 
     </body>
