--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -46,20 +46,20 @@
 			<p class="lead">A Scottish get away!</p>
 		</div>
 	</header>
-<hr>
+	<hr>
 
-<section>
-    <div class="container text-center" id="about">
-    <p>Do you love beautiful landscapes and sunsets?, You have came to the right place.</p>
+	<section>
+		<div class="container text-center" id="about">
+			<p>Do you love beautiful landscapes and sunsets?, You have came to the right place.</p>
 
-    <p>Here at TheHighlandsBreak we want to take away the stress from going through hundreds of site's
-    to find the right thing. 
-    Take a look below for the top 10 places to Stay, Eat and keep amused in Scotland.</p>
-    </div>
-</section>
+			<p>Here at TheHighlandsBreak we want to take away the stress from going through hundreds of site's
+				to find the right thing.
+				Take a look below for the top 10 places to Stay, Eat and keep amused in Scotland.</p>
+		</div>
+	</section>
 
-		<!-- Bootstrap -->
-        	<section>
+	<!-- Bootstrap -->
+	<section>
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -74,104 +74,106 @@
 						<p>Glamping Pod By the Sea in Scotland.</p>
 					</div>
 				</div>
-            </div> 
-				<div class="carousel-item">
-					<img src="assets/images/fairypool.jpeg" class="d-block w-100" alt="...">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Fairy Pools, Isle of Skye, Inner Hebrides</h5>
-						<p>Take a strole to see the magical and beautiful Fairy Pools.</p>
-					</div>
-				</div>
-				<div class="carousel-item">
-					<img src="assets/images/hill.jpeg" class="d-block w-100" alt="...">
-					<div class="carousel-caption d-none d-md-block">
-						<h5>Glencoe valley and mountains</h5>
-						<p>Climb Glencoe valley and mountains in the Scottish Highlands.</p>
-					</div>
+			</div>
+			<div class="carousel-item">
+				<img src="assets/images/fairypool.jpeg" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+					<h5>Fairy Pools, Isle of Skye, Inner Hebrides</h5>
+					<p>Take a strole to see the magical and beautiful Fairy Pools.</p>
 				</div>
 			</div>
-			<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-			</a>
+			<div class="carousel-item">
+				<img src="assets/images/hill.jpeg" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+					<h5>Glencoe valley and mountains</h5>
+					<p>Climb Glencoe valley and mountains in the Scottish Highlands.</p>
+				</div>
+			</div>
+		</div>
+		<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
 		</div>
 	</section>
-<hr>
-            <!-- Google Map -->
-            	<section>
+	<hr>
+	<!-- Google Map -->
+	<section>
 		<div class="container text-center" id="find">
-  <h2>Find it</h2>
-  </div>
+			<h2>Find it</h2>
+		</div>
 
-  <!--The div element for the map -->
-<div id="map"> HI MAPS</div>
+		<!--The div element for the map -->
 
-    <script>
-        function initMap() {
-            var map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 8, 
-                center: {
-                    lat:  56.6745575,
-                    lng: -5.0917746,
+		<div id="map"></div>
 
-                }
+		<script>
+			        function initMap() {
+                zoom: 4, 
+                center:{lat:56.6745575,lng:-5.0917746,}
+            var map = new google.maps.Map(document.getElementById("map"), {
             });
         }
 
-    </script>
+    
+		</script>
 
 
-    </section>
-    
-    <!--- Form -->
+	</section>
 
-    <section class="container-fluid">
-            <div>
-                <h3 class="contact-heading text-center">Book Now!</h3>
-                <h5 class="uppercase text-center">Please fill in th below and we will help you find your next highland break.</h5>
-            </div>
-            <div class="center-form">
-                <form>
-                    <input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
-                    <input type="text" name="phonenumber" class="form-control" id="phonenumber" placeholder="Phone Number" required/>
-                    <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-                    <textarea rows="5" name="moreinfo" class="form-control" id="moreinfo" placeholder="More Information" required></textarea>
-                    <button type="submit" class="btn btn-secondary center-block">Send Messege</button>
-                </form>
-            </div>
-        </div>
-    </section>
+	<!--- Form -->
+
+	<section class="container-fluid">
+		<div>
+			<h3 class="contact-heading text-center">Book Now!</h3>
+			<h5 class="uppercase text-center">Please fill in the below and we will help you find your next highland
+				break.</h5>
+		</div>
+		<div class="center-form">
+			<form>
+				<input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
+				<input type="text" name="phonenumber" class="form-control" id="phonenumber" placeholder="Phone Number" required/>
+				<input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
+				<textarea rows="5" name="moreinfo" class="form-control" id="moreinfo" placeholder="More Information" required></textarea>
+				<button type="submit" class="btn btn-secondary center-block">Send Messege</button>
+			</form>
+		</div>
+		</div>
+	</section>
 
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
-				<div class="col-12 ml-auto text-center"id="social-links">
-					<ul class="nav justify-content-center">
-						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-twitter fa-lg"></i></a>
-						</li>
-						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-instagram fa-lg"></i></a>
-						</li>
-						<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-facebook fa-lg"></i></a>
-						</li>
-					</ul>
-				</div>
-				<div class="col-12 text-center small">
-					@2020 DTs Design
-				</div>
+		<div class="col-12 ml-auto text-center" id="social-links">
+			<ul class="nav justify-content-center">
+				<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-twitter fa-lg"></i></a>
+				</li>
+				<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-instagram fa-lg"></i></a>
+				</li>
+				<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-facebook fa-lg"></i></a>
+				</li>
+			</ul>
+		</div>
+		<div class="col-12 text-center small">
+			@2020 DTs Design
+		</div>
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-        </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
-    </script>
- <!-- <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+		</script>
+		<!-- <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
  </script> -->
- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
- </script>    
+		<script async defer
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
+		</script>
 
-    </body>
+</body>
+
 </html>
