map is now showing

--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="assets/js/maps.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+
 
 	<title>TheHighlandsBreaks</title>
 </head>
@@ -112,11 +114,11 @@
 		<div id="map"></div>
 
 		<script>
-			        function initMap() {
-                zoom: 4, 
-                center:{lat:56.6745575,lng:-5.0917746,}
-            var map = new google.maps.Map(document.getElementById("map"), {
-            });
+			function initMap() {
+    var map = new google.maps.Map(document.getElementById("map"), {
+        zoom: 4,
+        center: { lat: 55.953251, lng:  -3.188267 }
+    });
         }
 
     
@@ -168,8 +170,8 @@
 		</script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
 		</script>
-		<!-- <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
- </script> -->
+		<script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
+ </script>
 		<script async defer
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
 		</script>
