added icons to link to map

--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="assets/js/maps.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 
 	<title>TheHighlandsBreaks</title>
@@ -103,6 +104,13 @@
 		</div>
 	</section>
 	<hr>
+
+    <!-- Icons -->
+
+    <button i class='fas fa-bed'></i> </button>
+    <button i class="fas fa-hamburger"></i></button>
+    <button i class='fas fa-bicycle'></i></button>
+
 	<!-- Google Map -->
 	<section>
 		<div class="container text-center" id="find">
