--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
 		<div class="container">
@@ -41,13 +42,17 @@
 			</div>
 		</div>
 	</nav>
+<!--./ end of Navigation -->
 
 	<header class="d-block w-100">
-		<div class="container text-center">
+		<div class="container-fluid text-center">
+        <div id="landing-picture"></div>
+       
 
 			<h1>TheHighlandsBreak</h1>
 			<p class="lead">A Scottish get away!</p>
 		</div>
+	</div>
 	</header>
 	<hr>
 
