--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -6,13 +6,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
-	<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="assets/js/maps.js"></script>
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 
 	<title>TheHighlandsBreaks</title>
@@ -42,19 +42,24 @@
 			</div>
 		</div>
 	</nav>
-<!--./ end of Navigation -->
+	<!--./ end of Navigation -->
 
+	<!-- Header-->
 	<header class="d-block w-100">
 		<div class="container-fluid text-center">
-        <div id="landing-picture"></div>
-       
+			<div id="landing-picture"></div>
+
 
 			<h1>TheHighlandsBreak</h1>
 			<p class="lead">A Scottish get away!</p>
 		</div>
-	</div>
+		</div>
 	</header>
+	<!--./ End of Header-->
+
 	<hr>
+
+	<!-- About -->
 
 	<section>
 		<div class="container text-center" id="about">
@@ -65,8 +70,9 @@
 				Take a look below for the top 10 places to Stay, Eat and keep amused in Scotland.</p>
 		</div>
 	</section>
-
-	<!-- Bootstrap -->
+	<!--./ End of About 
+-->
+	<!-- Bootstrap/carousel -->
 	<section>
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
@@ -108,13 +114,16 @@
 		</a>
 		</div>
 	</section>
+	<!--./ End of Carousel -->
 	<hr>
 
-    <!-- Icons -->
+	<!-- Icons -->
 
-    <button i class='fas fa-bed'></i> </button>
-    <button i class="fas fa-hamburger"></i></button>
-    <button i class='fas fa-bicycle'></i></button>
+	<button i class='fas fa-bed'></i> </button>
+	<button i class="fas fa-hamburger"></i></button>
+	<button i class='fas fa-bicycle'></i></button>
+
+	<!--./ End of Icons -->
 
 	<!-- Google Map -->
 	<section>
@@ -139,8 +148,9 @@
 
 
 	</section>
+	<!--./ End of Map -->
 
-	<!--- Form -->
+	<!--- Booking -->
 
 	<section class="container-fluid">
 		<div>
@@ -159,6 +169,7 @@
 		</div>
 		</div>
 	</section>
+	<!--./ Booking End -->
 
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
@@ -184,7 +195,7 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
 		</script>
 		<script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
- </script>
+		</script>
 		<script async defer
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
 		</script>
