added more comments

--- a/thehighlandsbreak/index.html
+++ b/thehighlandsbreak/index.html
@@ -15,7 +15,7 @@
 	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 
-	<title>TheHighlandsBreaks</title>
+	<title>TheHighlandsBreak</title>
 </head>
 
 <body>
@@ -63,26 +63,25 @@
 
 	<section>
 		<div class="container text-center" id="about">
-			<p>Do you love beautiful landscapes and sunsets?, You have came to the right place.</p>
+			<p>Do you love beautiful landscapes and sunsets?</p>
 
-			<p>Here at TheHighlandsBreak we want to take away the stress from going through hundreds of site's
-				to find the right thing.
-				Take a look below for the top 10 places to Stay, Eat and keep amused in Scotland.</p>
+			<p>Here at TheHighlandsBreak we want to take the stress away and are here to help you quickly and easily
+				find attractions, restaurants, bars and hotetls in Scotland.</p>
 		</div>
 	</section>
 	<!--./ End of About 
 -->
 	<!-- Bootstrap/carousel -->
 	<section>
-		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
-				<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-				<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-				<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="assets/images/hut.jpeg" class="d-block w-100" alt="...">
+					<img src="assets/images/hut.jpeg" class="d-block w-100" alt="GlampingPod">
 					<div class="carousel-caption d-none d-md-block">
 						<h5>Glamping</h5>
 						<p>Glamping Pod By the Sea in Scotland.</p>
@@ -104,11 +103,7 @@
 				</div>
 			</div>
 		</div>
-		<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
 			<span class="carousel-control-next-icon" aria-hidden="true"></span>
 			<span class="sr-only">Next</span>
 		</a>
@@ -117,7 +112,7 @@
 	<!--./ End of Carousel -->
 	<hr>
 
-	<!-- Icons -->
+	<!-- Icons (notfinished) -->
 
 	<button i class='fas fa-bed'></i> </button>
 	<button i class="fas fa-hamburger"></i></button>
@@ -189,8 +184,6 @@
 
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-		</script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
 		</script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
 		</script>
