--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		</div>
 		</div>
 	</section>
-	<!--./ Booking End -->
+	<!--./ Booking End (will add email function once maps is done)-->
 
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
