coorected file path to landing page changin assets, coorected some styling on Nav bar

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#about">About</a>
+						<a class="nav-link" href="#about">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#find">Find</a>
+						<a class="nav-link" href="#find">Find</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="#book">Book</a>
+						<a class="nav-link" href="#book">Book</a>
 					</li>
 				</ul>
 			</div>
@@ -169,13 +169,10 @@
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
 		<div class="col-12 ml-auto text-center" id="social-links">
-			<ul class="nav justify-content-center">
-				<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-twitter fa-lg"></i></a>
-				</li>
-				<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-instagram fa-lg"></i></a>
-				</li>
-				<li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-facebook fa-lg"></i></a>
-				</li>
+			<ul class="list-inline social-links">
+				<li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
+				<li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
+				<li><a target="_blank" href="#"><i class="fa fa-instagram"></i></a></li>
 			</ul>
 		</div>
 		<div class="col-12 text-center small">
