fixed issues with social icons

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -169,16 +169,20 @@
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
 		<div class="col-12 ml-auto text-center" id="social-links">
-			<ul class="list-inline social-links">
-				<li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
-				<li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
-				<li><a target="_blank" href="#"><i class="fa fa-instagram"></i></a></li>
-			</ul>
+                    <a href="https://en-gb.facebook.com" target="_blank">       <!--Facebook-->
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank">        <!--Instagram-->
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://twitter.com" target="_blank">              <!--Twitter-->
+                        <i class="fab fa-twitter"></i>
+                    </a>
 		</div>
 		<div class="col-12 text-center small">
 			@2020 DTs Design
 		</div>
-
+	</footer>
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 		</script>
