Icons added to button-icons flder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="assets/js/maps.js"></script>
-	<link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
+	<script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
 	<title>TheHighlandsBreak</title>
 </head>
@@ -115,9 +116,9 @@
 
 		<!-- Icons (notfinished) -->
 
-		<button i class='fas fa-bed'></i> </button>
-		<button i class="fas fa-hamburger"></i></button>
-		<button i class='fas fa-bicycle'></i></button>
+		<button class='fas fa-bed'></button>
+		<button class="fas fa-hamburger"></button>
+		<button class='fas fa-bicycle'></button>
 
 		<!--./ End of Icons -->
 
@@ -196,8 +197,7 @@
 	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
 	</script>
-	<script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
-	</script>
+
 	<script async defer
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB6lsBTP858vgMYEP7rM2yk-ipq3H9XaQ&callback=initMap">
 	</script>
