fixed booking section

--- a/index.html
+++ b/index.html
@@ -270,22 +270,17 @@
 		<!--- Booking -->
 
 		<section class="container-fluid">
-			<div>
-				<h3 class="contact-heading text-center">Book Now!</h3>
-				<h5 class="uppercase text-center">Please fill in the below and we will help you find your next highland
-					break.</h5>
-			</div>
-			<div class="center-form">
-				<form>
-					<input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required/>
-					<input type="text" name="phonenumber" class="form-control" id="phonenumber" placeholder="Phone Number" required/>
-					<input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
-					<textarea rows="5" name="moreinfo" class="form-control" id="moreinfo" placeholder="More Information" required></textarea>
-					<button type="submit" class="btn btn-secondary center-block">Send Messege</button>
-				</form>
-			</div>
-			</div>
-		</section>
+			        <section class="form-bg">
+            <div id="book">
+                <a>&nbsp;</a>
+            </div>
+            
+            <div class="container">
+          
+                <div class="booking-text">
+                    <h2>Book with us</h2>
+                    <p>Fill out the contact form below and we will be in touch to help you with your next highland breaks.</p>
+                </div>
 	</main>
 	<!--./ Booking End (will add email function once maps is done)-->
 
