--- a/index.html
+++ b/index.html
@@ -292,6 +292,10 @@
                             <label for="email">Email address</label>
                             <input type="email" class="form-control" id="email" name="emailAddress" required/>
                         </div>
+                        <div class="form-group">
+                            <label for="telephone">Telephone Number</label>
+                            <input type="tel" name="telephone" id="telephone" class="form-control" required/>
+                        </div>
 	</main>
 	<!--./ Booking End (will add email function once maps is done)-->
 
