added category selection to booking form

--- a/index.html
+++ b/index.html
@@ -296,6 +296,14 @@
                             <label for="telephone">Telephone Number</label>
                             <input type="tel" name="telephone" id="telephone" class="form-control" required/>
                         </div>
+                        <div class="form-group">
+                            <label for="poi-selection">Select a category</label>
+                            <select class="form-control" id="poi-selection" name="poi">
+                                <option>Hotel</option>
+                                <option>Restaurant</option>
+                                <option>Attraction</option>
+                            </select>
+                        </div>
 	</main>
 	<!--./ Booking End (will add email function once maps is done)-->
 
