renamed maps.js to main.js

--- a/index.html
+++ b/index.html
@@ -329,19 +329,25 @@
                                 <p>We look forward to speaking with you.</p>
                     
                                 <button id="close" class="btn text-uppercase" type="button">Close</button>
+                                                            </div>
+                            
+                        </div>
+                        <!--./row-->
+                    </div>
+    <!--./modal-content-->
 	<!-- Footer -->
 	<footer class="bg-dark text-white py-4">
 		<div class="col-12 ml-auto text-center" id="social-links">
 			<a href="https://en-gb.facebook.com" target="_blank">
-				<!--Facebook-->
+
 				<i class="fab fa-facebook-f"></i>
 			</a>
 			<a href="https://www.instagram.com" target="_blank">
-				<!--Instagram-->
+
 				<i class="fab fa-instagram"></i>
 			</a>
 			<a href="https://twitter.com" target="_blank">
-				<!--Twitter-->
+
 				<i class="fab fa-twitter"></i>
 			</a>
 		</div>
@@ -351,7 +357,8 @@
 			<a href="https://github.com/Taitdanielle">@2020 DanielleTait</a>
 		</div>
 	</footer>
-	<!-- Footer End -->
+	<!--./footer end -->
+
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
 	</script>
