--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 </head>
 
 <body>
-
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="mainNav">
 		<div class="container">
 			<a class="navbar-brand js-scroll-trigger" href="#page-top">TheHighlandsBreak</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +42,12 @@
 	</nav>
 	<!--./ end of Navigation -->
 
-	<!-- Header-->
+   <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4">TheHighlandsBreak</h1>
+        </div>
+    </div>
+	<!-- Header
 	<header class="d-block w-100">
 		<div class="container-fluid text-center">
 			<div id="landing-picture"></div>
@@ -185,12 +189,12 @@
 			<!--#/main-buttons-->
 
 			<div id="main">
-				<div class="container">
+				<div class="container container-fluid">
 
 					<!-- listings and map-->
 					<div class="row">
 
-						<div id="map" class="col-sm-12 col-md-6"></div>
+						<div id="map" class="col-sm-12 col-md-12 col-12"></div>
 
 						<div class="col-md-6">
 							<div class="justify-content-center row">
@@ -209,7 +213,7 @@
 				<!--./row-->
 
 				<!--Info window-->
-				<div style="display: none">
+				<div>
 					<div id="info-content">
 
 						<table>
@@ -334,8 +338,9 @@
 			<!--./row-->
 		</div>
 		<!--./modal-content-->
+        
 		<!-- Footer -->
-		<footer class="bg-dark text-white py-4">
+<footer class="bg-dark text-white py-4">
 			<div class="col-12 ml-auto text-center" id="social-links">
 				<a href="https://en-gb.facebook.com" target="_blank">
 
