--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="assets/js/main.js"></script>
-
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
 	<title>TheHighlandsBreak</title>
@@ -42,21 +41,14 @@
 	</nav>
 	<!--./ end of Navigation -->
 
-   <div class="jumbotron">
-        <div class="container">
-            <h1 class="display-4">TheHighlandsBreak</h1>
-        </div>
+	<div class="jumbotron d-block w-100"">
+		<div class="container text-center">
+			<div id="landing-picture">
+				<h1>TheHighlandsBreak</h1>
+                <p>A Scottish get away!</p>
+			</div>
+		</div>
     </div>
-	<!-- Header
-	<header class="d-block w-100">
-		<div class="container-fluid text-center">
-			<div id="landing-picture"></div>
-			<h1>TheHighlandsBreak</h1>
-			<p class="lead">A Scottish get away!</p>
-		</div>
-		</div>
-	</header>
-	<!--./ End of Header-->
 
 	<hr>
 
@@ -252,12 +244,12 @@
 		</section>
 		<!--End of Find-->
 		<!-- Google Map -->
-			<!--The div element for the map -->
+		<!--The div element for the map -->
 
-			<div id="map"></div>
+		<div id="map"></div>
 
-			<script>
-				function initMap() {
+		<script>
+			function initMap() {
     var map = new google.maps.Map(document.getElementById("map"), {
         zoom: 6,
         center: { lat: 55.953251, lng:  -3.188267 }
@@ -265,7 +257,7 @@
         }
 
     
-			</script>
+		</script>
 		<!--./ End of Map -->
 
 		<!--- Booking -->
@@ -317,7 +309,7 @@
                     </form>
 
 								</div>
-                                </section>
+		</section>
 	</main>
 	<!--./ Booking End (will add email function once maps is done)-->
 	<!-- Modal -->
@@ -338,9 +330,9 @@
 			<!--./row-->
 		</div>
 		<!--./modal-content-->
-        
+
 		<!-- Footer -->
-<footer class="bg-dark text-white py-4">
+		<footer class="bg-dark text-white py-4">
 			<div class="col-12 ml-auto text-center" id="social-links">
 				<a href="https://en-gb.facebook.com" target="_blank">
 
